# anker-kit

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SPA_DESIGN_PROPOSAL.md  pyproject.toml  spec-driven.md
.github/workflows/scripts/: create-release-packages.sh
docs/: installation.md  local-development.md  quickstart.md
scripts/bash/: check-prerequisites.sh
scripts/powershell/: check-prerequisites.ps1  update-agent-context.ps1
src/specify_cli/: __init__.py
src/specify_cli/spa/: __init__.py  agents.py  orchestrator.py  pat_initializer.py  simple_yaml.py  workflow.py
templates/: checklist-template.md  plan-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  implement.md  specify.md
